samiyaakhtar/hello-world-full-stack/backend/master/static/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: backend-master
spec:
  routes:
    - kind: Rule
      match: 'PathPrefix(`/backend`) && Headers(`Ring`, `master`)'
      middlewares:
        - name: backend-master
      services:
        - name: backend-master
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: backend
spec:
  routes:
    - kind: Rule
      match: PathPrefix(`/backend`)
      middlewares:
        - name: backend
      services:
        - name: backend-master
          port: 80
